--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,77 +1,64 @@
-annotation.processing.enabled=true
-annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
-annotation.processing.processors.list=
-annotation.processing.run.all.processors=true
-annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
-build.classes.dir=${build.dir}/classes
-build.classes.excludes=**/*.java,**/*.form
-# This directory is removed when the project is cleaned:
-build.dir=build
-build.generated.dir=${build.dir}/generated
-build.generated.sources.dir=${build.dir}/generated-sources
-# Only compile against the classpath explicitly listed here:
-build.sysclasspath=ignore
-build.test.classes.dir=${build.dir}/test/classes
-build.test.results.dir=${build.dir}/test/results
-# Uncomment to specify the preferred debugger connection transport:
-#debug.transport=dt_socket
-debug.classpath=\
-    ${run.classpath}
-debug.test.classpath=\
-    ${run.test.classpath}
-# Os arquivos em build.classes.dir que devem ser exclu\u00eddos do jar de distribui\u00e7\u00e3o
-dist.archive.excludes=
-# This directory is removed when the project is cleaned:
-dist.dir=dist
-dist.jar=${dist.dir}/Acolhimento.jar
-dist.javadoc.dir=${dist.dir}/javadoc
+#Thu Apr 25 08:38:54 GMT-03:00 2019
 excludes=
-includes=**
-jar.compress=false
-javac.classpath=\
-    ${libs.MySQLDriver.classpath}
-# Space-separated list of extra javac options
-javac.compilerargs=
 javac.deprecation=false
+build.test.results.dir=${build.dir}/test/results
+run.classpath=${javac.classpath}\:${build.classes.dir}
+javadoc.nonavbar=false
 javac.external.vm=true
-javac.processorpath=\
-    ${javac.classpath}
-javac.source=1.8
+file.reference.Acolhimento-test=test
+run.test.classpath=${javac.test.classpath}\:${build.test.classes.dir}
+annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+javac.processorpath=${javac.classpath}
 javac.target=1.8
+annotation.processing.processors.list=
+javadoc.noindex=false
+file.reference.Acolhimento-src=src
+javadoc.additionalparam=
+includes=**
+build.classes.dir=${build.dir}/classes
+source.encoding=UTF-8
+javadoc.author=false
+test.src.dir=${file.reference.Acolhimento-test}
+build.dir=build
+build.test.classes.dir=${build.dir}/test/classes
+platform.active=default_platform
+javac.compilerargs=
+main.class=controller.Main
+dist.jar=${dist.dir}/Acolhimento.jar
+javac.test.processorpath=${javac.test.classpath}
+javadoc.use=true
+dist.archive.excludes=
+build.sysclasspath=ignore
+debug.test.classpath=${run.test.classpath}
+dist.dir=dist
+build.classes.excludes=**/*.java,**/*.form
+annotation.processing.processor.options=
+javadoc.splitindex=true
+javadoc.encoding=${source.encoding}
+javac.source=1.8
+junit.selected.version=4
+debug.classpath=${run.classpath}
+run.jvmargs=
+build.generated.dir=${build.dir}/generated
+jar.compress=false
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}:\
+    ${libs.junit.classpath}:\
     ${libs.junit_4.classpath}:\
     ${libs.hamcrest.classpath}
-javac.test.processorpath=\
-    ${javac.test.classpath}
-javadoc.additionalparam=
-javadoc.author=false
-javadoc.encoding=${source.encoding}
-javadoc.noindex=false
-javadoc.nonavbar=false
-javadoc.notree=false
 javadoc.private=false
-javadoc.splitindex=true
-javadoc.use=true
+annotation.processing.run.all.processors=true
+meta.inf.dir=${src.dir}/META-INF
+manifest.file=manifest.mf
+annotation.processing.enabled=true
+dist.javadoc.dir=${dist.dir}/javadoc
+src.dir=${file.reference.Acolhimento-src}
+mkdist.disabled=false
+javac.classpath=\
+    ${libs.MySQLDriver.classpath}
+annotation.processing.enabled.in.editor=false
+build.generated.sources.dir=${build.dir}/generated-sources
 javadoc.version=false
 javadoc.windowtitle=
-main.class=controller.Main
-manifest.file=manifest.mf
-meta.inf.dir=${src.dir}/META-INF
-mkdist.disabled=false
-platform.active=default_platform
-run.classpath=\
-    ${javac.classpath}:\
-    ${build.classes.dir}
-# Space-separated list of JVM arguments used when running the project.
-# You may also define separate properties like run-sys-prop.name=value instead of -Dname=value.
-# To set system properties for unit tests define test-sys-prop.name=value:
-run.jvmargs=
-run.test.classpath=\
-    ${javac.test.classpath}:\
-    ${build.test.classes.dir}
-source.encoding=UTF-8
-src.dir=src
-test.src.dir=test
+javadoc.notree=false
