--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,10 +1,10 @@
-#Thu Apr 25 08:38:54 GMT-03:00 2019
+#Thu Apr 25 11:04:47 GMT-03:00 2019
 excludes=
 javac.deprecation=false
 build.test.results.dir=${build.dir}/test/results
+javac.external.vm=true
 run.classpath=${javac.classpath}\:${build.classes.dir}
 javadoc.nonavbar=false
-javac.external.vm=true
 file.reference.Acolhimento-test=test
 run.test.classpath=${javac.test.classpath}\:${build.test.classes.dir}
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
@@ -33,31 +33,25 @@ debug.test.classpath=${run.test.classpath}
 dist.dir=dist
 build.classes.excludes=**/*.java,**/*.form
 annotation.processing.processor.options=
-javadoc.splitindex=true
 javadoc.encoding=${source.encoding}
+javadoc.splitindex=true
 javac.source=1.8
-junit.selected.version=4
+junit.selected.version=3
 debug.classpath=${run.classpath}
 run.jvmargs=
-build.generated.dir=${build.dir}/generated
+javac.test.classpath=${javac.classpath}\:${build.classes.dir}\:\:${libs.junit_4.classpath}\:${libs.hamcrest.classpath}
 jar.compress=false
-javac.test.classpath=\
-    ${javac.classpath}:\
-    ${build.classes.dir}:\
-    ${libs.junit.classpath}:\
-    ${libs.junit_4.classpath}:\
-    ${libs.hamcrest.classpath}
+build.generated.dir=${build.dir}/generated
 javadoc.private=false
 annotation.processing.run.all.processors=true
 meta.inf.dir=${src.dir}/META-INF
-manifest.file=manifest.mf
 annotation.processing.enabled=true
+manifest.file=manifest.mf
 dist.javadoc.dir=${dist.dir}/javadoc
 src.dir=${file.reference.Acolhimento-src}
 mkdist.disabled=false
-javac.classpath=\
-    ${libs.MySQLDriver.classpath}
 annotation.processing.enabled.in.editor=false
+javac.classpath=${libs.MySQLDriver.classpath}
 build.generated.sources.dir=${build.dir}/generated-sources
 javadoc.version=false
 javadoc.windowtitle=
